--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: go
 
 go:
   - master
-
+  
 after_success:
-  test -n "$TRAVIS_TAG" && curl -s https://raw.githubusercontent.com/goreleaser/get/master/latest | bash
+  - test -n "$TRAVIS_TAG" && curl -sL https://git.io/goreleaser | bash
